--- a/nbs/03_llamaindex_agents.ipynb
+++ b/nbs/03_llamaindex_agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/michaelfrantz/miniconda3/envs/autodm/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from autodm.llm import get_llm\n",
     "from autodm.roll import Dice, DiceType\n",
     "from autodm.character import Character\n",
-    "from autodm.locaitons import Location, LocationStore, setup_new_locations\n",
+    "from autodm.locaitons import Location, LocationGraph, setup_new_locations\n",
     "from autodm.adventurelog import AdventureLog\n",
     "from autodm.storyline import StoryLineWithStoryItems\n",
     "\n",
@@ -28,22 +37,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel, Field\n",
-    "from typing import Optional, List, Any, Union, Dict\n",
-    "from pathlib import Path\n",
-    "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt"
+    "locations = setup_new_locations()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "region = locations[locations.list_locations('region').pop()]\n",
+    "city = locations[locations.list_locations('city').pop()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building = city.generate_child(type='building', storyline=\"The adventurers enter the wizard's guild\")\n",
+    "# room1 = building.generate_child(storyline=\"The adventurers find and enter the wizard's library.\")\n",
+    "# room2 = building.generate_child(storyline=\"The adventurers find and enter thewizard's alchemy lab\")\n",
+    "# room3 = building.generate_child(storyline=\"The adventurers find and enter thewizard's training range\")\n",
+    "# locations.add_location(building)\n",
+    "# locations.add_location(room1)\n",
+    "# locations.add_location(room2)\n",
+    "# locations.add_location(room3)\n",
+    "# locations.set_current_location(room1.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">Character</span><span style=\"font-weight: bold\">(</span>\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">chr_class</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'wizard'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">chr_race</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'human'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">name</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'Aldric'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">attributes</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">Attributes</span><span style=\"font-weight: bold\">(</span><span style=\"color: #808000; text-decoration-color: #808000\">strength</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">16</span>, <span style=\"color: #808000; text-decoration-color: #808000\">dexterity</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">10</span>, <span style=\"color: #808000; text-decoration-color: #808000\">constitution</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">12</span>, <span style=\"color: #808000; text-decoration-color: #808000\">intelligence</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>, <span style=\"color: #808000; text-decoration-color: #808000\">wisdom</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13</span>, <span style=\"color: #808000; text-decoration-color: #808000\">charisma</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span><span style=\"font-weight: bold\">)</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">level</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">max_hp</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">22</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">hp</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">22</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">spells</span>=<span style=\"font-weight: bold\">[]</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">equipment</span>=<span style=\"font-weight: bold\">[]</span>\n",
+       "<span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;35mCharacter\u001b[0m\u001b[1m(\u001b[0m\n",
+       "    \u001b[33mchr_class\u001b[0m=\u001b[32m'wizard'\u001b[0m,\n",
+       "    \u001b[33mchr_race\u001b[0m=\u001b[32m'human'\u001b[0m,\n",
+       "    \u001b[33mname\u001b[0m=\u001b[32m'Aldric'\u001b[0m,\n",
+       "    \u001b[33mattributes\u001b[0m=\u001b[1;35mAttributes\u001b[0m\u001b[1m(\u001b[0m\u001b[33mstrength\u001b[0m=\u001b[1;36m16\u001b[0m, \u001b[33mdexterity\u001b[0m=\u001b[1;36m10\u001b[0m, \u001b[33mconstitution\u001b[0m=\u001b[1;36m12\u001b[0m, \u001b[33mintelligence\u001b[0m=\u001b[1;36m3\u001b[0m, \u001b[33mwisdom\u001b[0m=\u001b[1;36m13\u001b[0m, \u001b[33mcharisma\u001b[0m=\u001b[1;36m2\u001b[0m\u001b[1m)\u001b[0m,\n",
+       "    \u001b[33mlevel\u001b[0m=\u001b[1;36m0\u001b[0m,\n",
+       "    \u001b[33mmax_hp\u001b[0m=\u001b[1;36m22\u001b[0m,\n",
+       "    \u001b[33mhp\u001b[0m=\u001b[1;36m22\u001b[0m,\n",
+       "    \u001b[33mspells\u001b[0m=\u001b[1m[\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "    \u001b[33mequipment\u001b[0m=\u001b[1m[\u001b[0m\u001b[1m]\u001b[0m\n",
+       "\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "character = Character.generate(level=0)\n",
     "print(character)"
@@ -51,172 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations = setup_new_locations()\n",
-    "print(locations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "city, region = locations.current, locations.get(locations.current.parent_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "story = StoryLineWithStoryItems.generate(character, city, region, locations)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(story)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "building = city.generate_child(type='building', storyline=\"The adventurers enter the wizard's guild\")\n",
-    "room1 = building.generate_child(storyline=\"The adventurers find and enter the wizard's library.\")\n",
-    "room2 = building.generate_child(storyline=\"The adventurers find and enter thewizard's alchemy lab\")\n",
-    "room3 = building.generate_child(storyline=\"The adventurers find and enter thewizard's training range\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "from autodm.locaitons import LOCATION_TYPES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LocationGraph:\n",
-    "    def __init__(self):\n",
-    "        self.graph = nx.Graph()\n",
-    "\n",
-    "    def set_current_location(self, location_name: str):\n",
-    "        self.current_location = self[location_name]\n",
-    "\n",
-    "    def add_location(self, location: Location):\n",
-    "        self.graph.add_node(location.name, **location.model_dump())\n",
-    "        if location.parent_name:\n",
-    "            self.graph.add_edge(location.parent_name, location.name)\n",
-    "\n",
-    "    def _node_to_location(self, node: Dict[str, Any]) -> Location:\n",
-    "        return Location(**node)\n",
-    "    \n",
-    "    def _nodes_to_locations(self, nodes: List[Dict[str, Any]]) -> List[Location]:\n",
-    "        return [self._node_to_location(node) for node in nodes]\n",
-    "\n",
-    "    def get_children(self, location_name: str):\n",
-    "        nodes = list(self.graph.successors(location_name))\n",
-    "        return self._nodes_to_locations(nodes)\n",
-    "\n",
-    "    def get_location(self, location_name: str) -> Optional[Dict[str, str]]:\n",
-    "        if location_name in self.graph:\n",
-    "            node = self.graph.nodes[location_name]\n",
-    "            return self._node_to_location(node)\n",
-    "        return None\n",
-    "\n",
-    "    def get_path(self, start_location: str, end_location: str):\n",
-    "        try:\n",
-    "            path = nx.shortest_path(self.graph, start_location, end_location)\n",
-    "            return path\n",
-    "        except nx.NetworkXNoPath:\n",
-    "            return None\n",
-    "        \n",
-    "    def __getitem__(self, name):\n",
-    "        return self._node_to_location(self.graph.nodes[name])\n",
-    "    \n",
-    "    def travel_plan(self, location_name: str) -> Union[str, List[Location]]:\n",
-    "        if location_name not in self.graph:\n",
-    "            return \"The location name is unknown. Try creating the location first, then try again.\"\n",
-    "        paths = self.get_path(self.current_location.name, location_name)\n",
-    "        return f\"To reach {location_name} from {paths[0]}, you must travel through the following locations: {','.join(paths[1:-1])}\"\n",
-    "        \n",
-    "    def visualize(self):\n",
-    "        plt.figure(figsize=(10, 8))\n",
-    "        pos = nx.spring_layout(self.graph)\n",
-    "        nx.draw(self.graph, pos, with_labels=True, node_size=3000, node_color='skyblue', font_size=10, font_weight='bold')\n",
-    "        node_labels = {node: \"\\n\\n\" + data['type'] for node, data in self.graph.nodes(data=True)}\n",
-    "        nx.draw_networkx_labels(self.graph, pos, labels=node_labels, font_size=8, font_color='red')\n",
-    "        plt.title('Location Graph')\n",
-    "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations=LocationGraph()\n",
-    "locations.add_location(region)\n",
-    "locations.add_location(city)\n",
-    "locations.add_location(building)\n",
-    "locations.add_location(room1)\n",
-    "locations.add_location(room2)\n",
-    "locations.add_location(room3)\n",
-    "locations.set_current_location(room1.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations.get_path(room3.name, room2.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations.graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
